--- a/style.css
+++ b/style.css
@@ -33,13 +33,15 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding-top: 10px;
+  padding-bottom: auto;
 }
 
 .past {
@@ -58,6 +60,9 @@ textarea{
 }
 
 .saveBtn {
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -68,4 +73,8 @@ textarea{
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
+}
+
+.saveBtn img {
+  width: 75%
 }
