--- a/style.css
+++ b/style.css
@@ -10,7 +10,15 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  width: 103%;
+  height: 100%;
+  margin-top: -30px;
+  margin-left: -1.5%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+
+  
 }
 
 .jumbotron {
@@ -28,6 +36,7 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  margin-bottom: 15px;
 }
 
 .row {
@@ -40,6 +49,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  border-bottom: 1px dashed #000000;
   padding-top: 10px;
   padding-bottom: auto;
 }
@@ -68,6 +78,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  width:100%
 }
 
 .saveBtn i:hover {
