Added padding to textarea

--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ textarea{
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-
-  
+  padding: 5px 10px;
 }
 
 .jumbotron {
